set slick-greeter as default

--- a/install-files/lightdm.conf.d/60-wasta-multidesktop.conf
+++ b/install-files/lightdm.conf.d/60-wasta-multidesktop.conf
@@ -1,3 +1,4 @@
 [Seat:*]
 allow-guest=false
+greeter-session=slick-greeter
 session-setup-script=/usr/share/wasta-multidesktop/scripts/wasta-login-wrapper.sh
